Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].

* Verilog::Language 2.31****

***     Add vrename --cryptall option.

* Verilog::Language 2.316 2005/06/10

****	Fix define substitution with incomplete defines.  [by Ronald Dean Smith]

****	Fix C++ Comments causing Perl compile problems. [Merijn Brand]

* Verilog::Language 2.315 2005/03/16

****	Support for latest SystemC::Netlist version.

* Verilog::Language 2.314 2005/03/14

****	Support for latest SystemC::Netlist version.

* Verilog::Language 2.313 2005/03/01

***	Vrename no longer recurses into CVS or .svn directories.

***	Add specparam keyword. [Mark Grossman]

****	Add NC-Verilog, and Verilog::Parser tests.

* Verilog::Language 2.312 2005/02/04

***	Fix ignoring lines with same line number as end of last include.

* Verilog::Language 2.311 2005/01/27

***	Support parsing of signed numbers.  [Rudi Rughoonundon]

**** 	Fix resolve_filename misfinding directories. [John Tseng]

****    Fix Verilog::Getopt::get_parameters for NC-Verilog.

* Verilog::Language 2.310 2005/01/24

**	NEWS is now renamed Changes, to support CPAN indexing. [Offer Kaye]

**	Support Verilog 2001 ansi-style port declarations. [Rudi Rughoonundon]

**	Pins, nets, ports, and cells accessor methods now return lists
	rather then internal hash references.  This matches earlier
	documentation, and behavior of the pins_sorted, etc functions.

***	SigParser::module callback no longer gets list of ports, instead
	SigParser::port is called back on each port.

***	Add Verilog::GetOpt GCC -U<define> switch for undefining.

****	Support SUSE Linux and OS-X. [Jose Renau] 

* Verilog::Language 2.303 2004/11/18

***	Add vpm --nopli for stripping $pli calls. [Mike Lopresti]

* Verilog::Language 2.302 2004/11/10

****	Support Verilog 2001 named instantiation parameters. [Thomas Ziller]

* Verilog::Language 2.301 2004/10/26

****	Fix pod documentation errors. [Offer Kaye]
